<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" android:fitsSystemWindows="true">

    <RelativeLayout
        android:background="@color/transparent" android:layout_width="fill_parent" android:layout_height="fill_parent">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_above="@+id/footerText"
        android:orientation="vertical" android:background="@drawable/gradient_line" android:layout_width="fill_parent" android:layout_height="fill_parent"
        xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_collapseMode="pin"
            app:navigationIcon="?homeAsUpIndicator"
            android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar"
            app:title="Frequent Asked Questions"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent">

            <ScrollView android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">

                <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">

                    <FrameLayout android:layout_width="fill_parent" android:layout_height="120.0dip">

                        <View android:background="@drawable/gradient_line" android:id="@+id/tobeset" android:layout_width="fill_parent" android:layout_height="fill_parent" />

                        <ImageView android:layout_width="fill_parent"
                            android:layout_height="fill_parent" android:src="@drawable/money"
                            android:scaleType="centerCrop" android:alpha="0.1" />
                        <LinearLayout android:layout_gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                            <ImageView android:id="@+id/logo" android:clickable="true" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_marginBottom="5.0dip" app:srcCompat="@mipmap/ic_launcher"
                                tools:ignore="VectorDrawableCompat" />
                            <TextView android:layout_gravity="center" android:id="@+id/tv" android:layout_width="wrap_content" android:layout_height="20.0dip" android:layout_marginBottom="10.0dip" android:tint="@color/colorPrimary"
                                android:textColor="@color/colorWhite" android:text="..keeping up to the Standard"/>
                        </LinearLayout>

                    </FrameLayout>

                    <LinearLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp">

                        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">

                            <TextView android:textSize="20.0sp" android:textColor="@color/colorPrimaryDark" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="20.0dip" android:text="Frequently Asked Questions?" />

                            <View android:background="@color/colorPrimary" android:layout_width="fill_parent" android:layout_height="1.0px" android:layout_marginLeft="20.0dip" android:layout_marginRight="20.0dip" android:alpha="0.3" />

                            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                                <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:layout_marginBottom="15.0dip">
                                    <TextView android:textSize="17.0sp" android:textColor="@color/colorWhite" android:gravity="center" android:background="@drawable/circle_blue" android:layout_width="30.0dip" android:layout_height="30.0dip" android:layout_marginLeft="20.0dip" android:layout_marginRight="10.0dip" android:text="1" />
                                    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                                        <TextView android:textSize="15.0sp" android:textColor="@color/colorPrimaryDark" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginRight="15.0dip" android:text="@string/qus1" />
                                        <TextView android:textSize="12.0sp" android:textColor="@color/cm_black" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:layout_marginRight="10.0dip" android:text="@string/ans1" android:alpha="0.7" />
                                    </LinearLayout>
                                </LinearLayout>
                                <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:layout_marginBottom="15.0dip">
                                    <TextView android:textSize="17.0sp" android:textColor="@color/colorWhite" android:gravity="center" android:background="@drawable/circle_blue" android:layout_width="30.0dip" android:layout_height="30.0dip" android:layout_marginLeft="20.0dip" android:layout_marginRight="10.0dip" android:text="2" />
                                    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                                        <TextView android:textSize="15.0sp" android:textColor="@color/colorPrimaryDark" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginRight="15.0dip" android:text="@string/qus2" />
                                        <TextView android:textSize="12.0sp" android:textColor="@color/cm_black" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:layout_marginRight="10.0dip" android:text="@string/ans2" android:alpha="0.7" />
                                    </LinearLayout>
                                </LinearLayout>
                                <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:layout_marginBottom="15.0dip">
                                    <TextView android:textSize="17.0sp" android:textColor="@color/colorWhite" android:gravity="center" android:background="@drawable/circle_blue" android:layout_width="30.0dip" android:layout_height="30.0dip" android:layout_marginLeft="20.0dip" android:layout_marginRight="10.0dip" android:text="3" />
                                    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                                        <TextView android:textSize="15.0sp" android:textColor="@color/colorPrimaryDark" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginRight="15.0dip" android:text="@string/qus3" />
                                        <TextView android:textSize="12.0sp" android:textColor="@color/cm_black" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:layout_marginRight="10.0dip" android:text="@string/ans3" android:alpha="0.7" />
                                    </LinearLayout>
                                </LinearLayout>
                                <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:layout_marginBottom="15.0dip">
                                    <TextView android:textSize="17.0sp" android:textColor="@color/colorWhite" android:gravity="center" android:background="@drawable/circle_blue" android:layout_width="30.0dip" android:layout_height="30.0dip" android:layout_marginLeft="20.0dip" android:layout_marginRight="10.0dip" android:text="4" />
                                    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                                        <TextView android:textSize="15.0sp" android:textColor="@color/colorPrimaryDark" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginRight="15.0dip" android:text="@string/qus4" />
                                        <TextView android:textSize="12.0sp" android:textColor="@color/cm_black" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:layout_marginRight="10.0dip" android:text="@string/ans4" android:alpha="0.7" />
                                    </LinearLayout>
                                </LinearLayout>
                                <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:layout_marginBottom="15.0dip">
                                    <TextView android:textSize="17.0sp" android:textColor="@color/colorWhite" android:gravity="center" android:background="@drawable/circle_blue" android:layout_width="30.0dip" android:layout_height="30.0dip" android:layout_marginLeft="20.0dip" android:layout_marginRight="10.0dip" android:text="5" />
                                    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                                        <TextView android:textSize="15.0sp" android:textColor="@color/colorPrimaryDark" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginRight="15.0dip" android:text="@string/qus5" />
                                        <TextView android:textSize="12.0sp" android:textColor="@color/cm_black" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:layout_marginRight="10.0dip" android:text="@string/ans5" android:alpha="0.7" />
                                    </LinearLayout>
                                </LinearLayout>
                                <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:layout_marginBottom="15.0dip">
                                    <TextView android:textSize="17.0sp" android:textColor="@color/colorWhite" android:gravity="center" android:background="@drawable/circle_blue" android:layout_width="30.0dip" android:layout_height="30.0dip" android:layout_marginLeft="20.0dip" android:layout_marginRight="10.0dip" android:text="6" />
                                    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                                        <TextView android:textSize="15.0sp" android:textColor="@color/colorPrimaryDark" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginRight="15.0dip" android:text="@string/qus6" />
                                        <TextView android:textSize="12.0sp" android:textColor="@color/cm_black" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:layout_marginRight="10.0dip" android:text="@string/ans6" android:alpha="0.7" />
                                    </LinearLayout>
                                </LinearLayout>
                            </LinearLayout>
                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </ScrollView>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

        <LinearLayout
            android:id="@+id/footerText"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView android:textSize="12.0sp" android:textColor="@color/md_black" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginRight="20.0dip" android:layout_marginBottom="10.0dip" android:layout_marginTop="5dip" android:text="@string/developer" android:alpha="0.9" />

        </LinearLayout>

    </RelativeLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/closeBtn"
        android:layout_width="40dip"
        android:layout_height="40dip"
        android:layout_gravity="end|bottom"
        android:layout_marginBottom="15dip"
        android:layout_marginRight="15dip"
        app:backgroundTint="@color/colorPrimaryDark"
        app:rippleColor="@color/colorPrimaryDark"
        app:fabSize="mini"
        app:srcCompat="@drawable/ic_cancel" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>